<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StartExploringFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/completedGreenIcon"
            android:layout_width="wrap_content"
            android:layout_height="104dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/completed_tick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/applicationAcceptedTV"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/account_created_successfully"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/completedGreenIcon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="4dp"
            android:text="@string/your_account_has_been_created_and_now_you_can_start_the_journey_to_find_your_job"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/applicationAcceptedTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/approvalContinueButton"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/continue_button_border"
        android:text="@string/start_exploring"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>